# gocourse

./: closures.go  defer.go  import.go  init.go  panic.go  range.go  reading_files.go  regular_expressions.go  slices.go  strings_runes.go  struct_embedding.go  structs.go  switch.go  time.go  variadic_functions.go
GoBootcamp/: API_Folder_Structure.odt  Connect.txt  MailHog instructions.txt  XSS Practice.txt
GoBootcamp/Lecture162-BenchmarkingHTTP1vsHTTP2/http1_api/: benchmarking.txt  http1.go
GoBootcamp/Lecture162-BenchmarkingHTTP1vsHTTP2/http2_api/: benchmarking.txt  cert.pem  (+3 more)
GoBootcamp/Lecture163-Serialize-Deserialize/: main.go
GoBootcamp/gRPC_API/: MailHog.txt  commands.txt  execsdatajson.txt  ghz_config.json  go.mod  go.sum  studentsdatajson.txt  teachersdatajson.txt
GoBootcamp/grpc_practice/benchmarking-Lecture305/RUST/rust_api/: Cargo.toml
GoBootcamp/grpc_practice/benchmarking-Lecture305/RUST/rust_api/src/: main.rs
GoBootcamp/modernroutes/: go.mod  main.go
GoBootcamp/proto_buf_practice/: command.txt
GoBootcamp/rest_api_go/: ROLEFORROUTES.TXT  execsdata.json  go.mod  go.sum  helpful_commands.txt  studentsdata.json  teachersdata.json
GoBootcamp/subrouting/: main.go
basics/: data_types.go  defer.go  exit.go  for_as_while.go  functions.go  if_else.go  import.go  init.go  maps.go  recover.go  variadic_functions.go
myself-coding/: command_line_args.go
myself-coding/basics/: arithmetic_operators.go  arrays.go  for_loop.go  guessing_game.go  multiple_return_values.go  naming_conventions.go  panic.go  range.go  slices.go  switch.go  variables.go
(+171 files in other folders)
