[package]
name = "rust_api"
version = "0.1.0"
edition = "2021"

[dependencies]
# actix dependencies
 actix-web = "4.0"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
# rocket dedpendencies
#serde = { version = "1.0", features = ["derive"] }
#rocket = { version = "0.5", features = ["json"] }
